# BLI-acousto-elastic

./: .gitignore  AcoustoElastic.cc  AcoustoElastic.h  AcoustoElastic.tcc  AcoustoElastic_assemble.tcc  AcoustoElastic_assemble_aux.tcc  AcoustoElastic_assemble_impedance.tcc  AcoustoElastic_sparsity.tcc  CMakeLists.txt  ElasticRHS.cc  ElasticRHS.h  ElasticRHS.tcc  ParameterReader.cc  ParameterReader.h  clean_cmake.sh  grid.geo  grid.msh  grid00.geo  includes.h  init_cmake.sh  main.cc  main.cc.bkp  my_point_source_vector.cc  my_point_source_vector.h  my_point_source_vector.tcc  params.prm  todo.wiki
fitting/: deal_vec.py  piecewise_polynomial_fit.py  quad_spline.py  step1_piecewise.py  step2.py  step2_piecewise.py
